--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date"> Augest 2022- June 2024</span>
     					<h2>Master of Science</h2>
-						<h3>AI ML DSs</h3>
-    					<span class="position">Gujarat University</span>
-    					<p class="mt-4">Pursuing</p>
+						<h3>Artificial inteligence &amp; Machine Learning Defence Specific</h3>
+    					<span class="position">Department of Computerscience, Gujarat University</span>
+    					<p class="mt-4">Completed </p>
     				</div>
     			</div>
 
@@ -526,7 +526,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Raj Vasoya</a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
