--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Raj Vasoya Portfolio</title>
@@ -337,7 +337,7 @@
     					<span class="date"> Augest 2022- June 2024</span>
     					<h2>Master of Science</h2>
 						<h3>Artificial inteligence &amp; Machine Learning Defence Specific</h3>
-    					<span class="position">Department of Computerscience, Gujarat University</span>
+    					<span class="position">Department of Computer Science &amp; Institute of Defence Studies and Reaserch(IDSR), Gujarat University</span>
     					<p class="mt-4">Completed </p>
     				</div>
     			</div>
@@ -347,7 +347,7 @@
     					<span class="date">July 2019- April 2022</span>
     					<h2>Bechlor of Science</h2>
 						<h3>Microbiology</h3>
-    					<span class="position">RG Shah Science Collage </span>
+    					<span class="position">RG Shah Science Collage, Gujarat University </span>
     					<p class="mt-4">CGPA : 6.48</p>
     				</div>
 				</div> 
