--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@
 									<li class="d-flex"><span>Profile:</span> <span>Artificial inteligence &amp; Machine Learning Developer</span></li>
 									<li class="d-flex"><span>Education:</span> <span>M.Sc. Artificial inteligence &amp; Machine Learning Defence Specific </span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Gujarati</span></li>
-									<li class="d-flex"><span>Skills:</span> <span>Jupyter, Visual code</span></li>
+									<li class="d-flex"><span>Skill:</span> <span>OOPs, AI, ML, Deep Learning, Natural language Processing (NLP), EDA, Feature Engineering, ANN, CNN, RNN, Reinforcement Learning, Prompt engineering</span></li>
+									<li class="d-flex"><span>Tools:</span> <span>Jupyter, Visual code, kaggle, google co-lab</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography, Research &amp; Sports</span></li>
 									
 								</ul>
@@ -338,7 +339,7 @@
     					<h2>Master of Science</h2>
 						<h3>Artificial inteligence &amp; Machine Learning Defence Specific</h3>
     					<span class="position">Department of Computer Science &amp; Institute of Defence Studies and Reaserch(IDSR), Gujarat University</span>
-    					<p class="mt-4">Completed </p>
+    					<p class="mt-4">Percentage : 65.45% </p>
     				</div>
     			</div>
 
@@ -362,10 +363,35 @@
     				</div>
 				</div> 
     		</div>
+		<div class="row">
+			<h1 class="big-4">Experience</h1>
+			<div class="underline"></div>
+		</div>
+		<br>
+		
+			<div class="row">
+    			<div class="col-md-6">
+    				<div class="resume-wrap ftco-animate">
+    					<h1>Applie Infosol Pvt. Ltd.</h1>
+						<span class="date"> March 2024- August 2024</span>
+						<h3>AI ML Intern</h3>
+    					<p class="mt-4"></p>
+    				</div>
+    			</div>
+
+    			<div class="col-md-6">
+    				<div class="resume-wrap ftco-animate">
+						<h1>Petpooja (prayosha food services Pvt. Ltd.)</h1>
+    					<span class="date">August 2024- currently</span>
+						<h3>Data science intern</h3>
+    					<span class="position"> </span>
+    					<p class="mt-4"></p>
+    				</div>
+				</div> 
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/13GwO3arLSgXt2RFaI2eyUUddanPrDUZM/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1e6gDeP5c3EFroAZ68_ah9kmBBsP3wKEC/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -499,7 +525,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/13GwO3arLSgXt2RFaI2eyUUddanPrDUZM/view?usp=drive_link">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1e6gDeP5c3EFroAZ68_ah9kmBBsP3wKEC/view?usp=drive_link">resumelink</a></p>
 	          </div>
           </div>
 
